# nauta

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/nauta/: __main__.py  account.py  cli.py  client.py  constants.py  database.py  models.py  secure.py  session.py
src/nauta/commands/: account.py  session.py
src/tests/: conftest.py  test_account_commands.py  test_nauta_client.py  test_secure.py
