[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
nauta = "nauta.cli:app"

[project]
name = "nauta"
version = "0.1.3"
authors = [{ name = "Raúl Cobiellas", email = "raulodev@gmail.com" }]
description = "Línea de comandos para el nauta hogar Cuba"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "typer==0.16.0",
  "appdirs==1.4.4",
  "requests==2.32.4",
  "beautifulsoup4==4.12.3",
  "urllib3==1.26.18",
]

[project.urls]
Homepage = "https://github.com/raulodev/nauta"
Issues = "https://github.com/raulodev/nauta/issues"
